Refs #58967 galaxy menu fix dynamic search input width on tablet

--- a/sass/components/_header-galaxy.scss
+++ b/sass/components/_header-galaxy.scss
@@ -208,6 +208,7 @@
         top: 1.25rem;
         left: 1.5rem;
         width: calc(100% - 3rem);
+        max-width: 100%;
         text-align: center;
         display: block;
         z-index: 3;
